# bedrock-protocol-nbt

./: README.md  pyproject.toml
bedrock_protocol/nbt/: __init__.py  byte_array_tag.py  byte_tag.py  compound_tag.py  compound_tag_variant.py  double_tag.py  end_tag.py  float_tag.py  int64_tag.py  int_array_tag.py  int_tag.py  list_tag.py  long_array_tag.py  short_tag.py  snbt_format.py  string_tag.py  tag.py  tag_type.py
bedrock_protocol/nbt/_internal/: __init__.py  native_library.py
bedrock_protocol/nbt/_internal/arm64/: libNBT.dylib
bedrock_protocol/nbt/_internal/x86_64/: libNBT.dylib
tests/: test.py
